# easyAppGui

./: README.md  pyproject.toml
easyAppGui/Charts/: AreaSeries.qml  BaseBokeh.qml  BaseChemDoodle.html  BaseChemDoodle.qml  BasePlot.qml  BaseQtCharts.qml  BokehChartView.qml  ChartView.qml  ChemDoodleChartView.qml  LineSeries.qml  ScatterSeries.qml  ValueAxis.qml  qmldir
easyAppGui/Components/: AboutDialog.qml  ApplicationWindow.qml  ConstraintsView.qml  ContentPage.qml  FitablesView.qml  GuideWindow.qml  PreferencesDialog.qml  ProjectDescriptionDialog.qml  SideBar.qml  TableView.qml  TableViewDelegate.qml  TableViewHeader.qml  TableViewLabel.qml  qmldir
easyAppGui/Elements/: AppBarTabButton.qml  ApplicationWindow.qml  Button.qml  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  GroupBox.qml  Label.qml  MenuItem.qml  Parameter.qml  RemoteController.qml  RemotePointer.qml  SideBarButton.qml  Slider.qml  SliderHandle.qml  StatusBar.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  TextInput.qml  ToolButton.qml  ToolTip.qml  qmldir
easyAppGui/Globals/: Variables.qml
easyAppGui/Logic/: Plotting.js  ProjectConfig.js  Utils.js  qmldir
easyAppGui/Style/: Colors.qml  Matplotlib.qml  Sizes.qml  qmldir
easyAppGui/easyAppGui/Components/: ApplicationWindow.qml  PreferencesDialog.qml
easyAppGui/easyAppGui/Elements/: RemoteController.qml
easyAppGui/easyAppGui/Globals/: Variables.qml
