# POETRY CONFIG

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "easyAppGui"
version = "0.0.1"
description = "Generic GUI for easyScience applications"
license = "GPL-3.0-only"
authors = ["Andrew Sazonov", "Simon Ward"]
readme = "README.md"
homepage = "https://github.com/easyScience/easyAppGui"
documentation = "https://github.com/easyScience/easyAppGui"
include = ["CHANGELOG.md"]
packages = [ { include = "easyAppGui" } ]

[tool.poetry.dependencies]
python = '^3.9, <3.10'
PySide2 = '^5.15.2'

[tool.poetry.dev-dependencies]

# CUSTOM CONFIG
